--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -8,5 +8,5 @@
 
 <mat-dialog-actions align="end">
   <button mat-button [mat-dialog-close]="false">Cancel</button>
-  <button mat-button [mat-dialog-close]="true">Install</button>
+  <button mat-button [mat-dialog-close]="true">決定</button>
 </mat-dialog-actions>
