情報を追加

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Yamada's House</h2>
+<h2 mat-dialog-title>Yamada's House、選択してください</h2>
 
 <ng-container *ngFor="let data of dataList">
   <div>
