--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,6 +1,6 @@
 <p>container works!</p>
 
-↓をクリックして選択してください。
+↓をクリックして選択してください！！！！
 
 <button mat-button (click)="openDialog()">Open dialog</button>
 
